--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <title>Kal-El Edwards's Computer Science Project Website</title>
   </head>
-  
+  <hr style="color:#F87431 ; height:7px "/>
   <body>
     <hr>
     <h1>Welcome World and All Who Inhabit It</h1>
