--- a/project2.html
+++ b/project2.html
@@ -11,12 +11,11 @@
     <h1>Welcome World and All Who Inhabit It</h1>
       <hr>
       <h2>Preamble</h2>
-   
         <p> 
           Welcome to the website of your dreams, as long as when you go to bed you dream of a 17 year old's computer science projects, and who wouldn't?
         </p>
       
-      <h2>Just How Great is Coding?</h2>
+      <h2>Just How Great is <br> Coding?</h2>
         <p>
           Since I don't want this turning into a personal blog I figured I should ramble a bit about how friggin awesome it feels to code a website. So far it is awesome, and I'm just a few CSS lessons away from making this thing shine.
         </p>
