--- a/project2.html
+++ b/project2.html
@@ -17,7 +17,7 @@
       
       <h2>Just How Great is <br> Coding?</h2>
         <p>
-          Since I don't want this turning into a personal blog I figured I should ramble a bit about how friggin awesome it feels to code a website. So far it is awesome, and I'm just a few CSS lessons away from making this thing shine.
+          Since I don't want this turning into a personal blog I figured I should ramble a bit about how friggin awesome it feels to code a website. So far it is awesome, and I'm just a few CSS lessons away from making this thing shine. For more info go to <a href="https://www.codecademy.com/">Codecademy</a>
         </p>
         
       <h2>Favorite Pieces of Media</h2>
