--- a/project2.html
+++ b/project2.html
@@ -22,10 +22,10 @@
         
       <h2>Favorite Pieces of Media</h2>
         <ul>
-          <a href= "http://www.imdb.com/title/tt0446029/"><li>Scott Pilgrim vs the World</li></a>
-          <a href= "https://en.wikipedia.org/wiki/Three_Flavours_Cornetto_trilogy"><li>The Corneto Trilogy</li></a>
+          <a href="http://www.imdb.com/title/tt0446029/"><li>Scott Pilgrim vs the World</li></a>
+          <a href="https://en.wikipedia.org/wiki/Three_Flavours_Cornetto_trilogy"><li>The Corneto Trilogy</li></a>
           <a href="http://store.steampowered.com/app/303210/"><li>The Beginner's Guide</a> and <a href= "http://store.steampowered.com/app/221910/">Stanley Parable</li></a>
-          <li>Mistborn</li>
+          <a href="http://brandonsanderson.com/books/mistborn/"><li>Mistborn</li></a>
         </ul>
           
         <h2>Places I Want To Go</h2>
