--- a/project2.html
+++ b/project2.html
@@ -24,7 +24,7 @@
         <ul>
           <a href="http://www.imdb.com/title/tt0446029/"><li>Scott Pilgrim vs the World</li></a>
           <a href="https://en.wikipedia.org/wiki/Three_Flavours_Cornetto_trilogy"><li>The Corneto Trilogy</li></a>
-          <a href="http://store.steampowered.com/app/303210/"><li>The Beginner's Guide</a> and <a href= "http://store.steampowered.com/app/221910/">Stanley Parable</li></a>
+          <a href="http://store.steampowered.com/app/303210/"><li>The Beginner's Guide</a> and <a href= "http://store.steampowered.com/app/221910/">The Stanley Parable</li></a>
           <a href="http://brandonsanderson.com/books/mistborn/"><li>Mistborn</li></a>
         </ul>
           
