--- a/project2.html
+++ b/project2.html
@@ -25,6 +25,7 @@
           <a href="http://www.imdb.com/title/tt0446029/"><li>Scott Pilgrim vs the World</li></a>
           <a href="https://en.wikipedia.org/wiki/Three_Flavours_Cornetto_trilogy"><li>The Corneto Trilogy</li></a>
           <a href="http://store.steampowered.com/app/303210/"><li>The Beginner's Guide</a> and <a href= "http://store.steampowered.com/app/221910/">The Stanley Parable</li></a>
+           <!-- started and stopped the hyperlink refrence before and after the and to visually link the games because of their similarities but let "and" not at actually be a link to either game. Question, does the red "li" and "a" at the end mean anything? It seems to work fine. -->
           <a href="http://brandonsanderson.com/books/mistborn/"><li>Mistborn</li></a>
         </ul>
           
