--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <a href="project1.html"><li>Project 1 - Basic Website</li></a>
     <a href="project2.html"><li>Project 2 - Basic Website +</li></a>
+    <a href="project3.html"><li>Project 3 - Basic Website ++</li></a>
     
     </ul>
   </body>
