--- a/project3.html
+++ b/project3.html
@@ -9,7 +9,7 @@
   <body>
  
     <h1>Welcome World and All Who Inhabit It</h1>
-      <hr>
+      <hr width=%200>
       <h2>Preamble</h2>
         <p> 
           Welcome to the website of your dreams, as long as when you go to bed you dream of a 17 year old's computer science projects, and who wouldn't?
