--- a/project3.html
+++ b/project3.html
@@ -24,10 +24,14 @@
       <h2>Favorite Pieces of Media</h2>
         <ul>
           <a href="http://www.imdb.com/title/tt0446029/"><li>Scott Pilgrim vs the World</li></a>
+            <img src="SP.jpg" width="140" hieght="175" alt"Scott Pilgrim vs. The World ">
           <a href="https://en.wikipedia.org/wiki/Three_Flavours_Cornetto_trilogy"><li>The Corneto Trilogy</li></a>
+            <img src="CT.jpg" width="300" hieght="139" alt"Cornetto Trilogy">
           <a href="http://store.steampowered.com/app/303210/"><li>The Beginner's Guide</a> and <a href= "http://store.steampowered.com/app/221910/">The Stanley Parable</li></a>
+            <img src="BG.jpg" width="460" hieght="215" alt"Beginner's Guide"><img src="StP.jpg" width="640" hieght="340" alt"Stanely Parable">
            <!-- started and stopped the hyperlink refrence before and after the and to visually link the games because of their similarities but let "and" not at actually be a link to either game. Question, does the red "li" and "a" at the end mean anything? It seems to work fine. -->
           <a href="http://brandonsanderson.com/books/mistborn/"><li>Mistborn</li></a>
+            <img src="" width="" hieght="" alt"">
         </ul>
           
         <h2>Places I Want To Go</h2>
@@ -38,8 +42,8 @@
             <li>Nepal</li>
           </ol>
              
-    <h1>My Projects</h1>
-        <p> To be filled in...</p>
+    <h1>Note</h1>
+        <p>I do not own any materials of the media I've noted. Please don't sue me. </p>
    
   </body>
 </html>
