--- a/project3.html
+++ b/project3.html
@@ -26,7 +26,7 @@
           <a href="http://www.imdb.com/title/tt0446029/"><li>Scott Pilgrim vs the World</li></a>
             <img src="SP.jpg" width="140" hieght="175" alt"Scott Pilgrim vs. The World ">
           <a href="https://en.wikipedia.org/wiki/Three_Flavours_Cornetto_trilogy"><li>The Corneto Trilogy</li></a>
-            <img src="CT.jpg" width="300" hieght="139" alt"Cornetto Trilogy">
+            <img src="CT.png" width="300" hieght="139" alt"Cornetto Trilogy">
           <a href="http://store.steampowered.com/app/303210/"><li>The Beginner's Guide</a> and <a href= "http://store.steampowered.com/app/221910/">The Stanley Parable</li></a>
             <img src="BG.jpg" width="460" hieght="215" alt"Beginner's Guide"><img src="StP.jpg" width="640" hieght="340" alt"Stanely Parable">
            <!-- started and stopped the hyperlink refrence before and after the and to visually link the games because of their similarities but let "and" not at actually be a link to either game. Question, does the red "li" and "a" at the end mean anything? It seems to work fine. -->
