--- a/project3.html
+++ b/project3.html
@@ -32,9 +32,12 @@
           
         <h2>Places I Want To Go</h2>
           <ol>
-            <li>The Many Beautiful Sites of Europe</li>
             <li>Australia</li>
+              <img src="Aus.jpg" hieght="100" width="140"  alt="Australian Outback">
+            <li>The Many Beautiful Sites of Europe</li>
+              <img src="Euro.jpg" height="100" width="500" alt="European Landmarks">
             <li>Ancient temples of Latin America</li>
+              <img src="Lat.jpg" height="100" width="140" alt="Latin Temple">
             <li>Nepal</li>
           </ol>
             
