--- a/animal.html
+++ b/animal.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title></title>
+      <title>Chinchillas</title>
     </head>
     
     <body>
+      <h1>My Favorite Animal<br>Chinchilla</h1>
+      <img src="Chin.jpg" width="150" hieght="100" alt="Chinny Chinchilla">
     </body>
   </html>
