--- a/project3.html
+++ b/project3.html
@@ -40,6 +40,9 @@
               <img src="Lat.jpg" height="100" width="140" alt="Latin Temple">
             <li>Nepal</li>
           </ol>
+        
+        <h2>My Favorite Animal</h2>
+          <p>I don't really have a favorite animal, but here's a <a href="animal.html">Chinchilla</a> because it's cute.
             
   </body>
 </html>
