--- a/animal.html
+++ b/animal.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-      <h1>My Favorite Animal<br><h4>But not really</h4><br>The Chinchilla</h1>
+      <h1>My Favorite Animal</h1><br><h4>But not really</h4><br><h1>The Chinchilla</h1>
       <img src="Chin.jpg" width="150" hieght="100" alt="Chinny Chinchilla">
         <p> This cute fluffball is the only thing I could think about, even though I enjoy the average friendly dog much more than a chinchilla</p>
       
