--- a/animal.html
+++ b/animal.html
@@ -6,9 +6,9 @@
     
     <body>
       <h1>My Favorite Animal</h1>
-        <h4>But not really</h4><br>
+        <h4>But not really</h4>
       <h1>The Chinchilla</h1>
-        <img src="Chin.jpg" width="150" hieght="100" alt="Chinny Chinchilla">
+        <img src="Chin.jpg" width="200" hieght="150" alt="Chinny Chinchilla">
           <p> This cute fluffball is the only thing I could think about, even though I enjoy the average friendly dog much more than a chinchilla</p>
       
       <a href="project3.html">Back to Project 3</a>
