--- a/project4.html
+++ b/project4.html
@@ -8,8 +8,8 @@
       <h1>Photo Gallery of Impossible Pictures<h1>
         <p>This photo gallery shows free-to-use images of M.C. Escher's work and work like it. It's impossible three dimensional structures made possible on a two dimensionl plain, which in layman's terms mean it's pretty trippy stuff.</p>
       
-      <a href="imposcube.png">
-        <img src="thumb_imposcube.png" width="150" hieght="160" alt="Impossible Cube">
+      <a href="/Photo Galler/imposcube.png">
+        <img src="/Photo Gallery/thumb_imposcube.png" width="150" hieght="160" alt="Impossible Cube">
       </a>
       
       <a href="imposdrwaing.jpg">
