--- a/project4.html
+++ b/project4.html
@@ -17,7 +17,7 @@
       <br>
       
       <a href="/Photo Gallery/imposdrawing.jpg">
-        <img src="thumb_imposdrawing.jpg" width="150" hieght="129" alt="Impossible Self-drawing Drawing">
+        <img src="/Photo Gallery/thumb_imposdrawing.jpg" width="150" hieght="129" alt="Impossible Self-drawing Drawing">
       </a>
         
       <br>
