--- a/imposcube.html
+++ b/imposcube.html
@@ -29,8 +29,12 @@
         <img src="/Photo Gallery/thumb_imposbuilding.gif" width="150" hieght="240" alt="Impossible Building">
       </a>
         
+      <a href="imposstairs.html">
+        <img src="/Photo Gallery/thumb_imposstairs." width="150" hieght="240" alt="Impossible Stairs">
+      </a>
+        
       <a href="project4.html">
-        <p> Back to Photo Gallery Index</p>
+        Back to Photo Gallery Index
       </a>
     </body>
   </html>
