--- a/imposbuilding.html
+++ b/imposbuilding.html
@@ -7,7 +7,7 @@
     <body>
       <h1>Photo Gallery of Impossible Pictures<h1>
         <img src="/Photo Gallery/imposbuilding.gif" alt="Impossible Building">
-        <p></p>
+        <p>This building is made up of railings, beams, floors, and a roof with alternating direction. Nothing should be keep it together yet it holds anyway.</p>
       
       <a href="imposcube.html">
         <img src="/Photo Gallery/thumb_imposcube.png" width="150" hieght="160" alt="Impossible Cube">
