--- a/imposbuilding.html
+++ b/imposbuilding.html
@@ -5,7 +5,7 @@
     </head>
     
     <body>
-      <h1>Photo Gallery of Impossible Pictures<h1>
+      <h1>Photo Gallery of Impossible Pictures - Impossible Building<h1>
         <img src="/Photo Gallery/imposbuilding.gif" alt="Impossible Building">
         <p>This building is made up of railings, beams, floors, and a roof with alternating direction. Nothing should be keep it together yet it holds anyway.</p>
       
