--- a/imposstream.html
+++ b/imposstream.html
@@ -28,7 +28,7 @@
       <br>
         
         <a href="imposstairs.html">
-        <img src="/Photo Gallery/thumb_imposstairs." width="150" hieght="240" alt="Impossible Stairs">
+        <img src="/Photo Gallery/thumb_imposstairs.jpg" width="150" hieght="240" alt="Impossible Stairs">
       </a>
         
         <br>
