--- a/imposcube.html
+++ b/imposcube.html
@@ -30,7 +30,7 @@
       </a>
         
       <a href="imposstairs.html">
-        <img src="/Photo Gallery/thumb_imposstairs." width="150" hieght="240" alt="Impossible Stairs">
+        <img src="/Photo Gallery/thumb_imposstairs.jpg" width="150" hieght="75" alt="Impossible Stairs">
       </a>
         
       <a href="project4.html">
