--- a/project5.html
+++ b/project5.html
@@ -24,7 +24,7 @@
         
       <br>
       
-        <table>
+        <table border="1">
           <tr>
             <td><th>Rank in Size</th></td>
             <td><th>State Name</th></td>
@@ -51,7 +51,7 @@
             <td>Helena</td>
           </tr>
            <tr>
-            <td>121,697</td>
+            <td>121,697 mi squared</td>
             <td>New Mexico</td>
             <td>Santa Fe</td>
           </tr>
