--- a/project5.html
+++ b/project5.html
@@ -26,9 +26,9 @@
       
         <table border="1">
           <tr>
-            <td><th>Rank in Size</th></td>
-            <td><th>State Name</th></td>
-            <td><th>State Capitol</th></td>
+            <td>Rank in Size</td>
+            <td>State Name</td>
+            <td>State Capitol</td>
           </tr>
            <tr>
             <td>663,300 mi squared</td>
