--- a/project5.html
+++ b/project5.html
@@ -26,9 +26,9 @@
       
         <table border="1">
           <tr>
-              <td>Rank in Size</td>
-              <td>State Name</td>
-              <td>State Capitol</td>
+              <th>Rank in Size</th>
+              <th>State Name</th>
+              <th>State Capitol</th>
           </tr>
            <tr>
             <td>663,300 mi squared</td>
