--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="project2.html"><li>Project 2 - Basic Website +</li></a>
     <a href="project3.html"><li>Project 3 - Basic Website ++</li></a>
     <a href="project4.html"><li>Project 4 - Photo Gallery</li></a>
-    <a href="project5.html"><li>Project 5 - Basic Tables</li></a>
+    <a href="tables/project5.html"><li>Project 5 - Basic Tables</li></a>
     <a href="project.html"><li></li></a>
     <a href="project.html"><li></li></a>
     <a href="project.html"><li></li></a>
