--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="project3.html"><li>Project 3 - Basic Website ++</li></a>
     <a href="project4.html"><li>Project 4 - Photo Gallery</li></a>
     <a href="tables/project5.html"><li>Project 5 - Basic Tables</li></a>
-    <a href="project/project6.html"><li>Project 6 - Basic External CSS</li></a>
+    <a href="project6/project6.html"><li>Project 6 - Basic External CSS</li></a>
     <a href="project.html"><li></li></a>
     <a href="project.html"><li></li></a>
     <a href="project.html"><li></li></a>
