--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <a href="project6/project6.html"><li>Project 6 - Basic External CSS</li></a>
     <a href="project7/project7.html"><li>Project 7 - External CSS w/ Classes and IDs</li></a>
     <a href="project8/project8.html"><li>Project 8 - 5 Day Weather Forecast Table</li></a>
-    <a href="project.html"><li></li></a>
+    <a href="project9/project9.html"><li>Project 9 - CSS Boxes</li></a>
     <a href="project.html"><li></li></a>
     <a href="project.html"><li></li></a>
     </ul>
