--- a/old_projects.html
+++ b/old_projects.html
@@ -3,11 +3,16 @@
 
 <html>
   <head>
-    <title>Kal-El Edwards's Computer Projects</title>
+    <title>Old Computer Projects</title>
   </head>
   
   <body>
-    <h1>Kal-El Edwards's Computer Project</h1>
+    <h1>\Old Computer Projects</h1>
+    
+    <p>Taking a Computer Science class my senior year of Highschool was tough at times but very rewarding. </br>
+       The class went through units of wiring circuits, putting together robots and drones, and learning </br>
+       the language of computing, specifically HTML5 and CSS. These are my fairly basic projects from that </br>
+       class, the improvement hopefully shows.</p>
     
     <ul>
     <a href="project1.html"><li>Project 1 - Basic Website</li></a>
@@ -19,8 +24,6 @@
     <a href="project7/project7.html"><li>Project 7 - External CSS w/ Classes and IDs</li></a>
     <a href="project8/project8.html"><li>Project 8 - 5 Day Weather Forecast Table</li></a>
     <a href="project9/index1.html"><li>Project 9 - Boxes</li></a>
-    <a href=""><li></li></a>
-    <a href=""><li></li></a>
     </ul>
   </body>
 </html>
