--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Kal-El Edwards's Website</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   
   <body>
