--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
       <a href="art_project.html".<li>Art Projects</li></a>
   
     </div
+  
+    <div class="row" "row3">
+      
+      Placeholder
+  
+     </div>
     
   </body>
 </html>
