--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       
       <a href="art_project.html".<li>Art Projects</li></a>
   
-    </div
+  </div>
   
     <div class="row" "row3">
       
